--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -89,6 +89,11 @@ flutter:
         - asset: fonts/Montserrat-ExtraBoldItalic.ttf
           style: italic
           weight: 900
+
+    - family: Montserrat-SemiBold
+      fonts:
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 600
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
