profile drawer completed functionality not included.

--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   assets:
     - assets/video/
     - assets/images/
+    - assets/images/drawer/
   #     - images/a_dot_burr.jpeg
   #     - images/a_dot_ham.jpeg
 
