--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
     - assets/video/
     - assets/images/
     - assets/images/drawer/
+    - assets/images/cart/
   #     - images/a_dot_burr.jpeg
   #     - images/a_dot_ham.jpeg
 
