--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -40,10 +40,15 @@ dependencies:
   firebase_core: 1.8.0
   shared_preferences: 2.0.7
   fluttertoast: ^8.0.8
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
