--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   carousel_slider: ^4.0.0
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
