--- a/daily_deals/pubspec.yaml
+++ b/daily_deals/pubspec.yaml
@@ -37,13 +37,14 @@ dependencies:
   pin_code_fields: ^7.3.0
   http: 0.13.3
   firebase_auth: 3.1.4
-  firebase_core: 1.8.0
+  firebase_core: 1.10.5
   shared_preferences: 2.0.7
   fluttertoast: ^8.0.8
   hive: ^2.0.4
   hive_flutter: ^1.1.0
   carousel_slider: ^4.0.0
   share: ^2.0.4
+  firebase_messaging: 11.2.3
 
 dev_dependencies:
   flutter_test:
