--- a/daily_deals/ios/Runner/Info.plist
+++ b/daily_deals/ios/Runner/Info.plist
@@ -30,9 +30,21 @@
 				<string>app-1-937209823504-ios-393333386927bc49a9e595</string>
 			</array>
 		</dict>
+        <dict>
+            <key>CFBundleTypeRole</key>
+        	<string>Editor</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb1299407640572604</string>
+            </array>
+        </dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<key>FacebookAppID</key>
+    <string>1299407640572604</string>
+    <key>FacebookDisplayName</key>
+    <string>DailyDeals</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
